logs/Slang/chapter-7/unions/packed/basic.sv.log
name: basic-packed-unions
description: Test basic union support
should_fail: 0
tags: 7.3.1
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/packed/basic.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/packed/basic.sv:9:1: error: language feature not yet supported
union packed {
^~~~~~~~~~~~~~
